--- a/ToDo.txt
+++ b/ToDo.txt
@@ -7,3 +7,8 @@ like columns(comments/options/published/approved/meta_data/...) in object_photo
 - In the Packages/Object/Controller/PhotoAdmin (add/edit)
 * Undefined property: BootStrap::$_dateTodayVeryShortDate
 * Call to undefined method Object_Model_Photo::GetAllCleanPhotosOrderByColWithLimit()
+
+- publish_from/publish_to when adding object and the admin insert blank should be handled when editing the object.
+
+- add condition in order update query in insert/update table, handle if the admin didn't type prder !
+- the update quesry by default +2 the value not +
